Styling: Improve styling, change button types, add vertical spacing to headings, paragraphs and buttons. Resolve loading wheel alignment issue by centering.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,15 @@ a:hover {
     text-decoration: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+p {
+    margin-bottom: 15px;
+}
+
 /* ------------------------------------------------- Backgrounds */
 
 .light-bg {
@@ -178,6 +187,8 @@ a:hover {
     color: var(--col-8);
     font-size: 14px;
     padding: 6px 12px;
+    margin-top: 15px;
+    margin-bottom: 20px;
 }
 
 .btn-custom:hover,
